# cybrconsole

./: README.md  pyproject.toml
cybrconsole/: cybrconsole.py
