[tool.poetry]
name = "cybrconsole"
version = "0.1.0"
description = ""
authors = ["cybrvybe <alexfigueroa.cybr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.1"
rich = "^13.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
